--- a/client/pages/main/assets/stylesheets/main.scss
+++ b/client/pages/main/assets/stylesheets/main.scss
@@ -29,5 +29,6 @@ $dowado-border-color: #d7dbdd;
 @import "components/auth-mobile-check";
 @import "components/alert-dialog";
 @import "components/home";
+@import "components/_auth-profile.scss";
 
 @import "layouts/responsive";
