--- a/client/pages/main/views/auth/signup-nick.html
+++ b/client/pages/main/views/auth/signup-nick.html
@@ -3,8 +3,8 @@
 
     <div class="content signup-social" data-ng-controller="SignUpCtrl">
         <div class="content-header">
-            <h3>도와도에서 사용할 이름을 정해주세요.</h3>
-            <p>회사일 경우 상호명을 적어주세요.</p>
+            <h3>{{'dowadoUseNick' | translate}}</h3>
+            <p>{{'dowadoUseNickCompany' | translate}}</p>
         </div>
         <div class="content-body">
             <form id="signupSocialNickForm" name="signupSocialNickForm" data-ng-submit="vm.signupSocialNick()" validate>
@@ -17,7 +17,7 @@
                     <img src="http://cdn.directv.com/cms3/global/images/img__checklarge.png" alt="">
                 </div>
 
-                <button type="submit" class="btn btn-submit"> 확인 </button>
+                <button type="submit" class="btn btn-submit"> {{'confirm' | translate}} </button>
             </form>
         </div>
 
