--- a/client/pages/main/assets/stylesheets/components/_auth.scss
+++ b/client/pages/main/assets/stylesheets/components/_auth.scss
@@ -17,6 +17,9 @@
       display: inline-block;
       float: left;
       margin-top: 10px;
+      a{
+        color: white;
+      }
     }
     .nav {
       float: right;
