--- a/client/pages/main/assets/stylesheets/components/_home.scss
+++ b/client/pages/main/assets/stylesheets/components/_home.scss
@@ -12,6 +12,9 @@
     display: inline-block;
     float: left;
     margin-top: 10px;
+    a{
+      color: white;
+    }
   }
   .nav {
     float: right;
