--- a/client/pages/main/views/auth/complete.html
+++ b/client/pages/main/views/auth/complete.html
@@ -2,8 +2,8 @@
 
     <div class="content sign-complete" data-ng-controller="SignUpCompleteCtrl">
         <div class="content-header">
-            <h3>가입이 완료되었습니다.</h3>
-            <p>공고에 지원하시려면 프로필을 작성해주세요.</p>
+            <h3>{{'signUpComplete' | translate}}</h3>
+            <p>{{'needProfile' | translate}}</p>
         </div>
         <div class="content-body">
 
@@ -12,12 +12,12 @@
             </div>
 
             <div class="button-wrapper">
-                <a href="#" class="btn recommend">추천인입력</a>
-                <a href="#" class="btn profile">프로필 관리 가기</a>
+                <a href="#" class="btn recommend">{{'recommend' | translate}}</a>
+                <a href="#" class="btn profile">{{'profileManagement' | translate}}</a>
             </div>
         </div>
         <div class="content-footer">
-            <a href="#" data-ng-click="vm.goToHome()">완료</a>
+            <a href="#" data-ng-click="vm.goToHome()">{{'complete' | translate}}</a>
         </div>
 
     </div>
