--- a/client/pages/main/views/auth/header.html
+++ b/client/pages/main/views/auth/header.html
@@ -1,14 +1,15 @@
 <header class="header">
-    <h1>도와도</h1>
+    <h1><a href="#" data-ng-click="vm.goToHome()">{{ 'dowado' | translate }}</a></h1>
 
     <nav class="nav">
         <ul class="nav-menu" data-ng-if="!vm.isLoggedIn()">
-            <li ><a href="#" ng-click="vm.goToSignin()">로그인</a></li>
-            <li><a href="#" ng-click="vm.goToSignUp()">회원가입</a></li>
+            <li ><a href="#" ng-click="vm.goToSignin()">{{ 'login' | translate }}</a></li>
+            <li><a href="#" ng-click="vm.goToSignUp()">{{ 'signUp' | translate }}</a></li>
         </ul>
         <ul class="nav-menu" data-ng-if="vm.isLoggedIn()">
-            <li ><a href="#" ng-click="vm.logout()">로그아웃</a></li>
-            <li><a href="#" data-ng-click="vm.userLeave()">회원 탈퇴</a></li>
+            <li ><a href="#" ng-click="vm.logout()">{{ 'logout' | translate }}</a></li>
+            <li><a href="#" data-ng-click="vm.userLeave()">{{ 'userDelete' | translate }}</a></li>
+            <li><a href="#" data-ng-click="vm.goToProfile()">{{ 'profile' | translate }}</a></li>
         </ul>
     </nav>
 </header>
